platoon page extension

--- a/_config/team.yml
+++ b/_config/team.yml
@@ -10,3 +10,4 @@ SilverStripe\CMS\Model\SiteTree:
   extensions:
     - WWN\Team\Extensions\TeamMemberPageExtension
     - WWN\Team\Extensions\TeamGroupPageExtension
+    - WWN\Team\Extensions\TeamPlatoonPageExtension
